# rustic-ai-backend-rs

./: Cargo.toml  Dockerfile.api  README.md  deploy.sh  setup.sh
.claude/: settings.json
crates/chats/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/chats/: chat.rs  config.rs  mod.rs
crates/domain/src/dto/: chat.rs
crates/rustic-agent/: Cargo.toml  README.md
crates/rustic-agent/examples/: completion.rs  completion_with_tools.rs
crates/rustic-agent/examples/tools/: get_weather.rs
crates/rustic-agent/src/: lib.rs
crates/rustic-agent/src/agents/: agent.rs  domain.rs  helper.rs  mod.rs  orchestrator.rs  pipeline_runner.rs  runner.rs
crates/rustic-agent/src/client/: llm.rs  mcp.rs  message.rs  mod.rs  preset.rs  request.rs  response.rs  rpc.rs  tools.rs
crates/rustic-agent/src/providers/: mod.rs
crates/rustic-agent/src/services/: mod.rs  (+2 more)
crates/rustic-boot/: Cargo.toml  README.md
crates/rustic-boot/src/: boot.rs  config.rs  lib.rs
crates/rustic-core/: Cargo.toml
crates/rustic-core/src/: http.rs  lib.rs
crates/rustic-core/src/agents/: tools.rs
crates/rustic-core/src/config/: load.rs
crates/rustic-core/src/utils/: serde_utils.rs
crates/rustic-core/tests/: http_tests.rs
crates/rustic-economic/src/: domain.rs  helper.rs  lib.rs  pipeline.rs  service.rs  storage.rs
crates/rustic-finance/: Cargo.toml
crates/rustic-finance/src/: lib.rs  service.rs
crates/rustic-finance/src/core/: load.rs  mod.rs
crates/rustic-finance/src/core/tickers/: indicators.rs  mod.rs  news.rs  sentiments.rs  sync.rs  update.rs
crates/rustic-finance/src/domain/: mod.rs
crates/rustic-finance/src/domain/dto/: mod.rs  ticker_entity.rs  ticker_filter.rs  ticker_group.rs  ticker_indicator_entity.rs  ticker_seed.rs  ticker_sentiment_entity.rs  ticker_snapshot.rs
crates/rustic-finance/src/domain/tickers/: control.rs  embedding.rs  history.rs  indicator.rs  mod.rs  sentiment.rs  ticker.rs  ticker_peer.rs
crates/rustic-finance/src/storage/: mod.rs  reader.rs  writer.rs
crates/rustic-finance/src/storage/mongo/: control.rs  embedding.rs  history.rs  indicator.rs  manager.rs  mod.rs  reader.rs  sentiment.rs  ticker.rs  writer.rs
crates/rustic-finance/src/tools/: mod.rs  ticker_indicator.rs  ticker_peers.rs  ticker_price_history.rs  ticker_screening.rs  ticker_sentiment.rs  ticker_snapshot.rs  ticker_taxonomy.rs
crates/rustic-finance/src/util/: data_utils.rs  date_utils.rs  mod.rs  string_utils.rs
crates/rustic-ml/: README.md
crates/rustic-ml/src/: lib.rs
crates/rustic-providers/: Cargo.toml
crates/rustic-providers/src/: lib.rs
crates/rustic-tools/: Cargo.toml
crates/rustic-tools/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: chat.rs  lib.rs  rustic.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  service.rs
crates/storage/src/mongo/: chat.rs  manager.rs  mod.rs  service.rs
data/config/: providers.json  providers_master.json
data/economic/: economic-data.json
(+73 files in other folders)
