[package]
name = "rustic-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace=true
async-trait.workspace=true
reqwest.workspace=true
serde.workspace = true
serde_json.workspace=true
thiserror.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

[dev-dependencies]
wiremock.workspace = true
tokio.workspace=true
tokio-test.workspace = true
