[package]
name = "rustic-ai-storage"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace=true
serde_json.workspace = true
serde.workspace = true
tokio.workspace=true
tracing.workspace = true

rustic-ai-domain.workspace = true

storage-core.workspace = true
